Time: 27 ms (55.70%), Space: 57.2 MB (84.64%) - LeetHub